History
=======

Version 0.7.3 - Unreleased
--------------------------

Version 0.7.2 - 2008-09-15
--------------------------

- Fix an issue where the scheduled send-out would send out items in
  their short form, i.e. only title and description.  [miziodel, nouri]

- Add a search box to the subscriptions administration view.

  Prior versions of S&D didn't populate the subscribers fulltext index
  correctly.  This version adds an upgrade step that you'll need to
  run in order to reindex all your subscription objects.

  Refer to the Upgrade_ section for details on how to run upgrades.
  [nouri]

- Allow pending subscriptions to be conformed by visiting the "My
  subscriptions" page.  This allows users to confirm their
  subscriptions even if they've lost or never received their message
  for confirm.  [nouri]

- More fine-tuning of the ``PloneCallHTMLFormatter``: Strip unwanted
  content like the review history in a configurable way.  [nouri]

Version 0.7.1 - 2008-09-05
--------------------------

- Added workaround for a bug in the composer where ``header_text`` or
  ``footer_text`` are ``None``.  No idea why they're ``None``, though.

Version 0.7.0 - 2008-09-05
--------------------------

- Added a new field ``subject`` for the composer.  This allows more
  control over what subject outgoing messages have, using string
  templates.  The default is ``${site_title}: ${channel_title}``.

  Removed the ``<h1>`` from the default composer template.  You can
  now use the ``header text`` of the composer to the same effect.  The
  default header text has now become ``<h1>${subject}</h1>`` to mimic
  the old behaviour.

  On the API side of things, I changed the signature of
  ``dancing.composer.HTMLComposer._vars``.  Since overriding this is
  the recommended way of providing your own variables, this warrants a
  0.7.0 release.  I'm thinking about adding a little variable provider
  component as an alternative to subclassing.
  [nouri]
